# WhisperApp

Whisper-TFLIte-Android-Example/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/FP16/: Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/FP16-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/FXdiv/: Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/FXdiv-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/clog-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/psimd/: Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/psimd-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/psimd-download/psimd-prefix/tmp/: psimd-gitclone.cmake  psimd-gitupdate.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/pthreadpool/: Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/pthreadpool-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/tensorflow-lite/: Makefile  cmake_install.cmake
Whisper-TFLIte-Android-Example/app/src/main/cpp/tf-lite-api/minimal_build/tmp/: abseil-cpp-populate-gitclone.cmake  abseil-cpp-populate-gitupdate.cmake  eigen-populate-gitclone.cmake  eigen-populate-gitupdate.cmake  xnnpack-populate-gitclone.cmake  xnnpack-populate-gitupdate.cmake
(+17 files in other folders)
